--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "passport": "^0.7.0"
