--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0"
   }
 }
