--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "nodemailer": "^7.0.3",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "uuid": "^11.1.0"
   }
 }
